[package]
name = "bitcoin-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-explorer = "1.1.1"
bitcoin = "0.29.2"
postgres = "0.19.4"
concurrent-queue = "1.2.4"
easy-parallel = "3.2.0"
rand = "0.8.5"
rust_decimal = { version = "1.26.1", features = [ "tokio-pg" ] }
rust_decimal_macros = "1.26"
hex = "0.4.3"
clap = { version = "4.0.18", features = ["derive"] }
indicatif = "0.17.1"
serde = "1.0.147"
confy = "0.5.1"