[package]
name = "bitcoin-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  
bitcoin-explorer = "1.2.17"
bitcoin = "0.27.1"
postgres = "0.19.4"
concurrent-queue = "1.2.4"
easy-parallel = "3.2.0"
rand = "0.8.5"
rust_decimal = { version = "1.26.1", features = [ "tokio-pg", "db-tokio-postgres" ] }
rust_decimal_macros = "1.26"
hex = "0.4.3"
clap = { version = "4.0.18", features = ["derive"] }
indicatif = "0.17.1"
serde = "1.0.147"
confy = "0.5.1"
bitcoincore-rpc = "0.14.0"
bitcoincore-rpc-json = "0.14.0"
rayon = "1.6.0"
log = "0.4"
env_logger = "0.10.0"

[patch.crates-io]
bitcoin = { path = "rust-bitcoin" }
